fix remaining-time-display on ie8 and ie9

--- a/src/css/_utilities.scss
+++ b/src/css/_utilities.scss
@@ -115,3 +115,11 @@
   @extend %fill-parent;
   text-align: center;
 }
+
+// don't wrap whitespace for the time control and make the text container 0 width
+// fixes a bug with 'width: auto' in IE 8/9
+.vjs-ie-auto-width-fix {
+  width: 0px !important;
+  white-space: nowrap;
+}
+
